test/cli/test-context-configmap/resources/pod-with-default-computeclass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-default-computeclass
  namespace: test-namespace
spec:
  containers:
  - name: test-container
    image: nginx:latest
